tests/samples/import-same-path/error.full.txt
A template shouldn't import itself, "'./template.blate'" found on line 2 at index 10.

1|// error: import same path
2|{@import './template.blate' context}
           ^
3|

File: /mnt/Emile/silassare/blate/src/Exceptions/Traits/BlateExceptionTrait.php
Line: 57
#0 /mnt/Emile/silassare/blate/src/Features/BlockImport.php(52): Blate\Exceptions\BlateRuntimeException::withToken()
#1 /mnt/Emile/silassare/blate/src/Parser.php(162): Blate\Features\BlockImport->onOpen()
#2 /mnt/Emile/silassare/blate/src/Parser.php(86): Blate\Parser->blockOpen()
#3 /mnt/Emile/silassare/blate/src/Blate.php(144): Blate\Parser->parse()
#4 /mnt/Emile/silassare/blate/tests/TemplateSyntaxTest.php(262): Blate\Blate->parse()
#5 /mnt/Emile/silassare/blate/tests/TemplateSyntaxTest.php(170): Blate\Tests\TemplateSyntaxTest->runInvalid()
#6 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestCase.php(1617): Blate\Tests\TemplateSyntaxTest->testImportSamePath()
#7 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestCase.php(1223): PHPUnit\Framework\TestCase->runTest()
#8 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestResult.php(729): PHPUnit\Framework\TestCase->runBare()
#9 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestCase.php(973): PHPUnit\Framework\TestResult->run()
#10 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestSuite.php(685): PHPUnit\Framework\TestCase->run()
#11 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestSuite.php(685): PHPUnit\Framework\TestSuite->run()
#12 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestSuite.php(685): PHPUnit\Framework\TestSuite->run()
#13 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/TextUI/TestRunner.php(651): PHPUnit\Framework\TestSuite->run()
#14 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/TextUI/Command.php(146): PHPUnit\TextUI\TestRunner->run()
#15 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/TextUI/Command.php(99): PHPUnit\TextUI\Command->run()
#16 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/phpunit(107): PHPUnit\TextUI\Command::main()
#17 /mnt/Emile/silassare/blate/vendor/bin/phpunit(123): include('...')
#18 {main}